objects/Service_Line__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leader_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>Identify the service line name</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <label>Service Line</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IZ00000005tqIMAQ_00NZ00000012w8BMAQ</fullName>
        <active>false</active>
        <field>Offering__c.Service_Line_Name__c</field>
        <filterItems>
            <field>Service_Line__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Offering_Service Line</name>
    </namedFilters>
    <pluralLabel>Service Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>